add link to tutorial

--- a/optimization/multi-objective.tex
+++ b/optimization/multi-objective.tex
@@ -1,1 +1,3 @@
 \chapter{Multi-objective Optimization} \label{chap:multi-objective}
+
+A useful resource for evolutionary approaches can be found at: \url{http://www.cs.cinvestav.mx/~emooworkgroup/zitzler04.pdf}.
