--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -4,3 +4,36 @@
   journal={arXiv preprint arXiv:1611.03530},
   year={2016}
 }
+
+@article{svmsNg,
+  title={Support Vector Machines},
+  author={Ng, Andrew}
+  journal={CS229 course notes}
+  url={\url{http://cs229.stanford.edu/notes/cs229-notes3.pdf}}
+}
+
+@inproceedings{vapnik1992principles,
+  title={Principles of risk minimization for learning theory},
+  author={Vapnik, Vladimir},
+  booktitle={Advances in neural information processing systems},
+  pages={831--838},
+  year={1992}
+}
+
+@article{neumann1928theorie,
+  title={Zur theorie der gesellschaftsspiele},
+  author={Neumann, J v},
+  journal={Mathematische annalen},
+  volume={100},
+  number={1},
+  pages={295--320},
+  year={1928},
+  publisher={Springer}
+}
+
+@misc{sejdinovic2012rkhs,
+  title={What is an RKHS?},
+  author={Sejdinovic, Dino and Gretton, Arthur},
+  year={2012},
+  publisher={Citeseer}
+}
