--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -37,3 +37,28 @@
   year={2012},
   publisher={Citeseer}
 }
+
+@misc{turingMachines,
+  title = {Turing Machines},
+  author={Dana Angluin},
+  howpublished = {\url{http://zoo.cs.yale.edu/classes/cs201/topics/topic-TM.pdf}},
+  note = {Accessed: 2018-10-11}
+}
+
+@article{turing1937computable,
+  title={On computable numbers, with an application to the Entscheidungsproblem},
+  author={Turing, Alan M},
+  journal={Proceedings of the London mathematical society},
+  volume={2},
+  number={1},
+  pages={230--265},
+  year={1937},
+  publisher={Wiley Online Library}
+}
+
+@misc{pvnp,
+  title = {P versus NP},
+  howpublished = {\url{https://en.wikipedia.org/wiki/P_versus_NP_problem}},
+  note = {Accessed: 2018-10-13}
+}
+
