--- a/optimization/main.tex
+++ b/optimization/main.tex
@@ -15,6 +15,7 @@
 \usepackage{fancyvrb}
 \usepackage{array}
 \usepackage{dirtytalk}
+\usepackage{graphicx}
 \usepackage[colorlinks]{hyperref}
 \usepackage{cleveref}
 
@@ -132,6 +133,7 @@ The goal is to develop it over time and therefore it should be considered a work
 
 \mainmatter
 \input{intro}
+\input{computation}
 \input{multi-objective}
 
 % ------------------------------------------------------------------
