--- a/differentials/differential-appendix.tex
+++ b/differentials/differential-appendix.tex
@@ -30,7 +30,7 @@ We define the \textit{differential} of $f$ at $p$ with increment $h$ to be the c
 
 \section{Vector functions}
 
-The same logic can be applied directly to vector functions~\cite{magnus1988matrix}.  Given a vector function $\phi: \real^n \to \real^m$ and that there exists some matrix $A$ such that at a point $\pp \in \real^n$
+The same logic can be applied directly to vector functions~\citep{magnus1988matrix}.  Given a vector function $\phi: \real^n \to \real^m$ and that there exists some matrix $A$ such that at a point $\pp \in \real^n$
 
 \begin{align}
   \phi(\pp + \hh) =   \phi(\pp) + \underbrace{A(\pp)}_{m \times n}\hh + r_\pp(\hh)
