--- a/differentials/intro.tex
+++ b/differentials/intro.tex
@@ -4,14 +4,17 @@ Calculus plays a central role in computer vision. As the community has integrate
 
 Finally, we note that the widespread adoption of automatic differentiation (autodiff) has been a major boon to the whole community, in many cases obviating the need to perform arduous pen and paper derivations.  The goal of these notes is not to encourage the reader to avoid using autodiff, but to assist them in understanding, on a mathematical level, what is going on \say{under the hood}.
 
+%\section{Where is it useful?}
+%
+%TODO.
 
-\section{Useful Resources}
+\section{Resources}
 
 There are a number of extremely good references for getting to grips with the calculus of vector and matrix functions.  Below are a few that we have found particularly useful, providing much of the material for these notes:
 
 \begin{itemize}
-\item Written by econometricians Magnus and Neudecker (originally in $1988$, but revised several times), \textit{Matrix differential calculus with applications in statistics and econometrics} is the canonical reference for matrix differential calculus~\cite{magnus1988matrix}.
-\item The fundamentals of working with matrices \cite{searle2017matrix}.
-\item \cite{kinghorn1996integrals}, \cite{minka2000old} and \cite{petersen2008matrix} each contain a large number of highly useful results and are good as quick references.
-\item The MatConvNet manual \cite{vedaldi2015matconvnetmanual} provides carefully worked through examples of matrix derivatives.  While the emphasis is primarily on index-based derivations, it provides the derivatives of many common neural network computation blocks in matrix form and is very useful as a reference. 
+\item Written by econometricians Magnus and Neudecker (originally in $1988$, but revised several times), \textit{Matrix differential calculus with applications in statistics and econometrics} is the canonical reference for matrix differential calculus~\citep{magnus1988matrix}.
+\item The fundamentals of working with matrices \citep{searle2017matrix}.
+\item \citep{kinghorn1996integrals}, \citep{minka2000old} and \citep{petersen2008matrix} each contain a large number of highly useful results and are good as quick references.
+\item The MatConvNet manual \citep{vedaldi2015matconvnetmanual} provides carefully worked through examples of matrix derivatives.  While the emphasis is primarily on index-based derivations, it provides the derivatives of many common neural network computation blocks in matrix form and is very useful as a reference. 
 \end{itemize}
